--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ letter-spacing : 1px;
 body h1, h2, h3, h4, h5, h6 {
 color : #141414;
 font-family : "Lato", sans-serif;
-font-size : 15px;
+font-size : 25px;
 text-transform : capitalize;
 font-weight : 800;
 text-transform : uppercase;
@@ -920,4 +920,11 @@ width : 355px !important ;
 }
 .single_cnt_m {
 width : 731px !important ;
+}
+#video, video {
+	margin: 0 auto ;
+	padding-top: 100px ; 
+	width: 1080px ;
+	height: 720px ;
+	
 }
